--- a/sumazon/src/components/footer/footer.css
+++ b/sumazon/src/components/footer/footer.css
@@ -7,14 +7,15 @@
     align-items: center;
     width: 100%;
     gap: 50px;
+    font-family: 'montserrat', sans-serif;
 }
 
 .footer_top{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    align-items: center;
-    width: 40%;
+    width: 60%;
+    height: max-content;
 }
 
 .footer_bottom{
@@ -30,9 +31,7 @@
 .container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: max-content;    
+    height: max-content;
 }
 
 .top{
@@ -43,12 +42,20 @@
     width: 100%;
 }
 
+.top > p {
+    color: white;
+    font-size: 15px;
+    margin-right: 10px;
+    text-transform: uppercase;
+}
+
 .bottom{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: start;
-    width: 100%;
+    height: 100%;
+    gap: 5px;
 }
 
 .bottom > a {
