--- a/sumazon/src/components/header/header.css
+++ b/sumazon/src/components/header/header.css
@@ -3,7 +3,9 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: #e5e5e5;
+    padding: 10px 20px;
+    background-color: #f5f5f5;
+    font-family: 'montserrat', sans-serif;
 }
 
 .header_container > img{
@@ -14,13 +16,93 @@
 .navigation_container{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    width: 50%;
+    justify-content: center;
+    width: 60%;
+    gap: 25px;
 }
+
+.navigation_element{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    color: #000000;
+    height: fit-content;
+    width: fit-content;
+    margin-bottom: auto;
+}
+
+.navigation_element:hover{
+    text-decoration: underline;
+}
+
+.navigation_element > a{
+    text-decoration: none;
+    color: #000000;
+}
+
 
 .tailing_component{
     display: flex;
     flex-direction: row;
     justify-content: end;
-    width: 50%;
+    width: max-content;
+    gap: 10px;
 }
+
+.search_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 50px;
+}
+
+.search_container:hover{
+    background-color: #f0f0f0;
+}
+
+
+.search_bar_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.search_bar_container input[type="text"] {
+    /* Your styling for the input field goes here */
+    background-color: transparent;
+    border: none;
+    font-size: 16px;
+}
+
+.search_bar_container input[type="text"]:hover {
+    /* Your styling for the input field when it is hovered goes here */
+    background-color: #f0f0f0;
+    border-radius: 50px;
+}
+
+.search_bar_container input[type="text"]:focus {
+    /* Your styling for the input field when it is in focus goes here */
+    outline: none;
+}
+
+.icon_container{
+    font-size: 18px;
+    color: #000000;
+    height: 35px;
+    width: 35px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+.icon_container:hover{
+    background-color: #d3d3d3;
+}
+
