--- a/sumazon/src/components/common/Card.css
+++ b/sumazon/src/components/common/Card.css
@@ -41,3 +41,11 @@
   font-weight: bold;
   color: #000;
 }
+
+
+.bottom-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
