--- a/sumazon/src/components/common/common.css
+++ b/sumazon/src/components/common/common.css
@@ -63,7 +63,6 @@
 .crousel_card > img{
     width: 100%;
     height: 90%;
-    object-fit: cover;
 }
 
 .card_data{
@@ -81,4 +80,26 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+
+.search-result-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: scroll;
+    height: 500px;
+}
+
+.search_result_card{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* hover effect for searchresult card */
+.search_result_card:hover{
+    background-color: white
 }
