--- a/sumazon/src/pages/NavPages/Cart.css
+++ b/sumazon/src/pages/NavPages/Cart.css
@@ -35,6 +35,14 @@
     font-family: 'montserrat', sans-serif;
 }
 
+.cart-component{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
 .content{
     display: flex;
     flex-direction: column;
